# adventofcode

./: .gitignore  README.md  adventofcode.sln  aoc.sln
csharp/: Day01.cs  ISolver.cs  Program.cs  Runner.cs  adventofcode.csproj
python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  main.py  pyproject.toml
python/src/adventofcode/: __init__.py  __main__.py  grid.py  main.py
python/src/adventofcode/year2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
rust/: Cargo.toml
rust/src/: grid.rs  lib.rs  main.rs  utils.rs
rust/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
rust/src/year2021/: day01.rs  day04.rs  day06.rs  day09.rs  day12.rs  day13.rs  day17.rs  day18.rs  mod.rs
rust/src/year2022/: day02.rs  day03.rs  day04.rs  day10.rs  day12.rs  day16opt.rs  day18.rs  day20.rs  day25.rs  mod.rs
rust/src/year2023/: day01.rs  day04.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day15.rs  day16.rs  mod.rs
(+300 files in other folders)
