[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Solves Advent of Code puzzles - python version"
authors = ["molleafauss <lmollea@yahoo.it>"]
readme = "README.md"
packages = [{include = "adventofcode", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
