[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Solves Advent of Code puzzles - python version"
authors = ["molleafauss <lmollea@yahoo.it>"]
packages = [{include = "adventofcode", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
adventofcode = "adventofcode.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
