[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
once_cell = "1.19.0"
factorial = "0.4.0"
log4rs = "1.2.0"
log = "0.4.20"
num = "0.4.1"
clap = { version = "4.5.53", features = ["derive"] }
chrono = "0.4.42"

